2009-01-05  Dan Winship  <danw@gnome.org>

	2.25.4

	* NEWS: update

2008-12-23  Dan Winship  <danw@gnome.org>

	* configure.in: belated post-release bump to 2.25.4

	* libsoup/soup-session.c (soup_session_get_features)
	(soup_session_get_feature): add these to query session features.
	#565392.

2008-12-23  Dan Winship  <danw@gnome.org>

	* configure.in: add some more warning CFLAGS, inspired by Benjamin
	Otte's blog post, although none of them picked out any actual
	bugs. Annoyingly, the most interesting warnings came from
	-Wwrite-strings and -Wshadow, both of which I decided against
	keeping, because they had too many false positives.

	* libsoup/soup-cookie-jar.c (soup_cookie_jar_get_cookies): rename
	a variable to avoid shadowing.

	* libsoup/soup-message-headers.c
	(soup_message_headers_get_ranges): move a variable declaration to
	avoid a possibly-confusing shadowing.

	* tests/forms-test.c:
	* tests/header-parsing.c:
	* tests/range-test.c:
	* tests/test-utils.c: constify some "char *"s that should have
	already been const.

	* tests/get.c (find_hrefs): rename an arg whose name shadowed a
	global, to avoid possible future confusion
	(get_url): Likewise with a functional-internal shadowing.

2008-12-15  Dan Winship  <danw@gnome.org>

	* configure.in: 2.25.3

	* NEWS: update

2008-12-09  Dan Winship  <danw@gnome.org>

	* libsoup/soup-uri.c (soup_uri_new): Explicitly document the fact
	that you have to call soup_uri_set_path() when using
	soup_uri_new(NULL), since path is required to be non-%NULL.

	* libsoup/soup-connection.c (connect_message): initialize
	uri->path

	* libsoup/soup-cookie.c (soup_cookie_applies_to_uri):
	g_return_val_if_fail() rather than crashing if uri->path is %NULL.
	Also, fix the cookie/uri path comparison to not potentially read
	off the end of uri->path. #562191, Mark Lee.

2008-12-04  Dan Winship  <danw@gnome.org>

	* libsoup/soup-form.c (soup_form_decode): Correctly handle forms